--- a/README
+++ b/README
@@ -2,8 +2,9 @@
 Python pcap module
 ------------------
 
-This is a simplified object-oriented Python wrapper for libpcap -
-the current tcpdump.org version, and the WinPcap port for Windows.
+this is a simplified object-oriented Python wrapper for libpcap -
+the current tcpdump.org version, the legacy version shipping with 
+some of the BSD operating systems, and the WinPcap port for Windows.
 
 example use:
 
@@ -12,20 +13,7 @@ example use:
 ...     print ts, `pkt`
 ... 
 
-Building
---------
+-d.
 
-Just try 'make', and then 'make install'
-
-If your libpcap installation is missing the pcap-int.h header, you
-will need to build against a libpcap build directory. Modify the
-CONFIG_ARGS in the Makefile to point to the location of your built
-libpcap distribution, and try again.
-
-See INSTALL file for more detailed build instructions.
-
-Support
--------
-
-Visit http://code.google.com/p/pypcap for help!
-
+---
+http://monkey.org/~dugsong
