--- a/README
+++ b/README
@@ -1,9 +1,3 @@
-Packet Construction Set
+fasguard-pcap
 
-George V. Neville-Neil
-
-Version 0.3
-
-5 September 2006
-
-http://pcs.sf.net
+Version 0.1
