move the .pyx files up a level
Cython doesn't like the the .pyx files to be in arbitrary directories;
they should be placed in directories according to their module names
(e.g., fasguard_pcap/pcap.pyx for the module fasguard_pcap.pcap).  It's
unclear how PCS got away with putting them in arbitrary directories.

--- a/HACKING
+++ b/HACKING
@@ -9,8 +9,8 @@ fasguard-pcap without performing a full installation.
 
 Note: Make sure that you do not try to import fasguard_pcap.pcap while
 you are in the top level of this tree, otherwise the Python
-interpreter will match the fasguard_pcap/pcap directory instead of
-pcap.so.
+interpreter will search the local fasguard_pcap directory instead of
+the directory containing the compiled module.
 
 An ImportError exception will be raised, but it won't tell you that you're
 trying to import a directory. This happens even if PYTHONPATH is set
